# quay

./: .gitignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: architecture.md  auto-update.md  branding-icons.md  configuration.md  development.md  docker-services.md  installation.md  metrics.md  packaging.md  port-radar.md  process-reattach.md  troubleshooting.md  usage.md
docs/plans/: 2026-06-26-menubar-service-manager.md  2026-06-27-terminal-detection.md
docs/specs/: 2026-06-26-menubar-service-manager-design.md  2026-06-27-terminal-detection-design.md
scripts/: make-latest-json.mjs  release-build.sh  set-version.mjs
src/: App.tsx  form.ts  index.css  ipc.ts  list.ts  main.ts  main.tsx  model.test.ts  model.ts  row.ts  settings.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: brew.rs  commands.rs  detect.rs  docker.rs  health.rs  lib.rs  main.rs  metrics.rs  model.rs  scanner.rs  state.rs  store.rs  supervisor.rs  terminal.rs
src/components/: BuoyMark.tsx  DetectedRow.tsx  Popup.tsx  ServiceForm.tsx  ServiceRow.tsx  SettingsDialog.tsx  StackIcon.tsx
src/lib/: docker.ts  env.ts
