[package]
name = "menubar-service-manager"
version = "0.1.0"
description = "A native macOS menubar app to start, stop, and monitor your local dev services, Homebrew services, and terminal agents."
authors = ["Kumar Abhishek <manustays@gmail.com>"]
license = "MIT"
repository = "https://github.com/manustays/menubar-cli-launcher"
homepage = "https://github.com/manustays/menubar-cli-launcher"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "menubar_service_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
ureq = "3.3.0"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-autostart = "2.5.1"
sysinfo = "0.39"

