[package]
name = "quay"
version = "0.5.2"
description = "Native macOS menubar app to start, stop, and monitor local dev servers, Homebrew services, Docker containers, and CLI tools — with live CPU/memory metrics."
authors = ["Kumar Abhishek <manustays@gmail.com>"]
license = "MIT"
repository = "https://github.com/manustays/quay"
homepage = "https://github.com/manustays/quay"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
ureq = "3.3.0"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-autostart = "2.5.1"
sysinfo = "0.39"

